JJBA: subida para despliegue en GCP - nuevos endpoints - correccion de vulnerabilidades y mejoras 6